--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,9 @@
 .container {
   padding: 0 2rem;
+  background-image: url(../public/home.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .main {
@@ -10,6 +14,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.titleHome {
+  font-family: 'Bungee', cursive;
+  font-size: 50px;
+  color: #16a085; /*Mountain Meadow */
 }
 
 .footer {
@@ -88,8 +98,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #16a085;
+  border-color: #16a085;
 }
 
 .card h2 {
