updated routes again for update route

--- a/styles/Budget.module.css
+++ b/styles/Budget.module.css
@@ -4,6 +4,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  /*height: 100vh;*/
 }
 
 .titleHome h2{
