updates routes back to deployment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,8 @@
 
 .container2 {
   padding: 0 2rem;
-  background-image: url(../public/aboutusbg.jpg);
+  /*background-image: url(../public/aboutusbg.jpg);*/
+  background-image: url(../public/home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
